--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 
   <main class="grid grid-cols-1 sm:grid-cols-2 lg:grid-cols-3 gap-6 p-6">
     <a href="#manifesto" class="hover-image group block relative">
-      <img src="https://via.placeholder.com/400x250?text=The+Manifesto" alt="Manifesto" class="w-full h-auto rounded-2xl shadow-md">
+      <img src="images/hu_ai_art_10" alt="Manifesto" class="w-full h-auto rounded-2xl shadow-md">
       <div class="absolute inset-0 bg-black bg-opacity-30 flex items-center justify-center opacity-0 group-hover:opacity-100 transition">
         <span class="text-white text-xl">The Nächster Manifesto</span>
       </div>
