--- a/index.html
+++ b/index.html
@@ -39,16 +39,23 @@
       font-family: 'Georgia', serif;
       font-size: 1.25rem;
       text-shadow: 0 1px 2px rgba(0,0,0,0.7);
-      transition: transform 0.4s ease, font-size 0.4s ease;
+      transition: transform 0.4s ease, font-size 0.4s ease, color 0.4s ease, text-shadow 0.4s ease;
     }
     .group:hover .hover-text {
       transform: scale(1.08);
+      text-shadow: 0 0 10px rgba(255, 255, 255, 0.6);
     }
     .hover-text.light {
       color: #d7c49e;
     }
     .hover-text.dark {
       color: #1b3a1a;
+    }
+    .group:hover .hover-text.light {
+      color: #1b3a1a;
+    }
+    .group:hover .hover-text.dark {
+      text-shadow: 0 0 10px rgba(27, 58, 26, 0.6);
     }
   </style>
 </head>
