bugfix hover elements 2

--- a/index.html
+++ b/index.html
@@ -42,7 +42,9 @@
       text-shadow: 0 1px 2px rgba(0,0,0,0.7);
       transition: transform 0.4s ease, font-size 0.4s ease, color 0.4s ease, text-shadow 0.4s ease;
     }
-    
+    .group:hover .hover-text {
+      transform: scale(1.08);
+    }
     .hover-text.light {
       color: #d7c49e;
     }
@@ -50,6 +52,9 @@
       color: #d7c49e;
     }
     .group:hover .hover-text.light {
+       
+  background-color: red;
+
       color: #000000;
       text-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
     }
