--- a/index.html
+++ b/index.html
@@ -53,13 +53,14 @@
     }
     .group:hover .hover-text.light {
        
-  background-color: red;
+  background-color:rgba(245, 245, 235, 0.7)
 
-      color: #000000;
+      color: #1b3a1a  ;
       text-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
     }
     .group:hover .hover-text.dark {
-      color: #ffffff;
+      background-color: rgba(15, 30, 20, 0.65);
+      color: #f2e2b3;
       text-shadow: 0 0 10px rgba(255, 255, 255, 0.6);
     }
   </style>
