bugfix background colour hover

--- a/index.html
+++ b/index.html
@@ -52,10 +52,9 @@
       color: #d7c49e;
     }
     .group:hover .hover-text.light {
-       
-  background-color:rgba(245, 245, 235, 0.7)
+       background-color:rgba(245, 245, 235, 0.7);
 
-      color: #1b3a1a  ;
+      color:#1b3a1a   ;
       text-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
     }
     .group:hover .hover-text.dark {
