refined hover colours

--- a/index.html
+++ b/index.html
@@ -51,6 +51,9 @@
     .hover-text.dark {
       color: #d7c49e;
     }
+    .hover-text.bluegreen {
+      color:#d7c49e
+    }
     .group:hover .hover-text.light {
       
       color:#1b3a1a   ;
@@ -60,6 +63,10 @@
       
       color: #f2e2b3;
       text-shadow: 0 0 10px rgba(255, 255, 255, 0.6);
+    }
+    .group:hover .hover-text.bluegreen {
+      color :#c4a469 ;
+      text-shadow: 0 0 10px rgba(50, 70, 60, 0.5);
     }
   </style>
 </head>
@@ -74,7 +81,7 @@
       <img src="images/hu_ai_art_10.png" alt="Manifesto" class="w-full h-auto shadow-md">
       <div class="image-overlay"></div>
       <div class="absolute inset-0 flex items-center justify-center z-10">
-        <span class="hover-text light">The Nächster Manifesto</span>
+        <span class="hover-text bluegreen">The Nächster Manifesto</span>
       </div>
     </a>
     <a href="#writings" class="hover-image group block relative">
