--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
       text-shadow: 0 0 10px rgba(255, 255, 255, 0.6);
     }
     .group:hover .hover-text.bluegreen {
-      color :#c4a469 ;
+      color :#c9521b ;
       text-shadow: 0 0 10px rgba(50, 70, 60, 0.5);
     }
   </style>
