--- a/index.html
+++ b/index.html
@@ -65,8 +65,8 @@
       text-shadow: 0 0 10px rgba(255, 255, 255, 0.6);
     }
     .group:hover .hover-text.bluegreen {
-      color :#c9521b ;
-      text-shadow: 0 0 10px rgba(50, 70, 60, 0.5);
+      color :#b2441b ;
+      text-shadow: 0 0 14px rgba(70, 30, 10, 0.75);;
     }
   </style>
 </head>
