--- a/index.html
+++ b/index.html
@@ -65,15 +65,20 @@
       text-shadow: 0 0 10px rgba(255, 255, 255, 0.6);
     }
     .group:hover .hover-text.bluegreen {
-      color :#b2441b ;
-      text-shadow: 0 0 14px rgba(70, 30, 10, 0.75);;
+      color :#641c34 ;
+      text-shadow: 0 0 14px rgba(50, 10, 20, 0.75);
     }
+    .site-title {
+      font-family: 'Cormorant Garamond', serif;
+      color: #d7c49e;
+    }
+
   </style>
 </head>
 <body class="bg-transparent">
   <header class="text-center py-10">
-    <h1 class="text-4xl font-bold tracking-tight">Sympnoia</h1>
-    <p class="mt-2 text-lg">Breathing Together: An Ethical Framework for Shared Existence</p>
+    <h1 class="text-4xl font-bold tracking-tight site-title">Sympnoia</h1>
+    <p class="mt-2 text-lg site-title">Breathing Together: An Ethical Framework for Shared Existence</p>
   </header>
 
   <main class="grid grid-cols-1 sm:grid-cols-2 lg:grid-cols-3 gap-6 p-6">
