--- a/index.html
+++ b/index.html
@@ -58,15 +58,17 @@
       
       color:#1b3a1a   ;
       text-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
+      font-weight: 600;
     }
     .group:hover .hover-text.dark {
-      
       color: #f2e2b3;
       text-shadow: 0 0 10px rgba(255, 255, 255, 0.6);
+      font-weight: 600;
     }
     .group:hover .hover-text.bluegreen {
       color :#641c34 ;
       text-shadow: 0 0 14px rgba(50, 10, 20, 0.75);
+      font-weight: 600;
     }
     .site-title {
       font-family: 'Cormorant Garamond', serif;
