--- a/index.html
+++ b/index.html
@@ -84,25 +84,25 @@
   </header>
 
   <main class="grid grid-cols-1 sm:grid-cols-2 lg:grid-cols-3 gap-6 p-6">
-    <a href="#manifesto" class="hover-image group block relative">
-      <img src="images/hu_ai_art_10.png" alt="Manifesto" class="w-full h-auto shadow-md">
+    <a href="writings.html" class="hover-image group block relative">
+      <img src="images/Writings.png" alt="Writings" class="w-full h-auto shadow-md">
       <div class="image-overlay"></div>
       <div class="absolute inset-0 flex items-center justify-center z-10">
-        <span class="hover-text bluegreen">The Nächster Manifesto</span>
+   
       </div>
     </a>
-    <a href="#writings" class="hover-image group block relative">
-      <img src="images/writings.png" alt="Writings" class="w-full h-auto shadow-md">
+    <a href="blog.html" class="hover-image group block relative">
+      <img src="images/Blog.png" alt="Blog" class="w-full h-auto shadow-md">
       <div class="image-overlay"></div>
       <div class="absolute inset-0 flex items-center justify-center z-10">
-        <span class="hover-text light">Writings</span>
+       
       </div>
     </a>
-    <a href="#gallery" class="hover-image group block relative">
-      <img src="images/gallery.png" alt="Gallery" class="w-full h-auto shadow-md">
+    <a href="gallery.html" class="hover-image group block relative">
+      <img src="images/Gallery.png" alt="Gallery" class="w-full h-auto shadow-md">
       <div class="image-overlay"></div>
       <div class="absolute inset-0 flex items-center justify-center z-10">
-        <span class="hover-text dark">Gallery</span>
+       
       </div>
     </a>
   </main>
