Update image on grid properties

--- a/index.html
+++ b/index.html
@@ -85,21 +85,21 @@
 
   <main class="grid grid-cols-1 sm:grid-cols-2 lg:grid-cols-3 gap-6 p-6">
     <a href="writings.html" class="hover-image group block relative">
-      <img src="images/Writings.png" alt="Writings" class="w-full h-auto shadow-md">
+      <img src="images/Writings.png" alt="Writings" class="w-full max-w-sm h-auto shadow-md mx-auto">
       <div class="image-overlay"></div>
       <div class="absolute inset-0 flex items-center justify-center z-10">
    
       </div>
     </a>
     <a href="blog.html" class="hover-image group block relative">
-      <img src="images/Blog.png" alt="Blog" class="w-full h-auto shadow-md">
+      <img src="images/Blog.png" alt="Blog" class="w-full max-w-sm h-auto shadow-md mx-auto">
       <div class="image-overlay"></div>
       <div class="absolute inset-0 flex items-center justify-center z-10">
        
       </div>
     </a>
     <a href="gallery.html" class="hover-image group block relative">
-      <img src="images/Gallery.png" alt="Gallery" class="w-full h-auto shadow-md">
+      <img src="images/Gallery.png" alt="Gallery" class="w-full max-w-sm h-auto shadow-md mx-auto">
       <div class="image-overlay"></div>
       <div class="absolute inset-0 flex items-center justify-center z-10">
        
