--- a/writings.html
+++ b/writings.html
@@ -44,15 +44,15 @@
   </header>
 
   <main class="grid grid-cols-1 sm:grid-cols-2 lg:grid-cols-2 gap-6 p-6">
-    <a href="#prose" class="hover-image group block relative max-w-md mx-auto">
-      <img src="images/placeholder_prose.png" alt="Prose" class="w-full h-auto shadow-md">
+    <a href="philosophy.html" class="hover-image group block relative max-w-md mx-auto">
+      <img src="images/Philosophy.png" alt="Prose" class="w-full h-auto shadow-md">
       <div class="image-overlay"></div>
       <div class="absolute inset-0 flex items-center justify-center z-10">
         <!-- Optional hover text if needed -->
       </div>
     </a>
-    <a href="#theoretical" class="hover-image group block relative max-w-md mx-auto">
-      <img src="images/placeholder_theoretical.png" alt="Theoretical" class="w-full h-auto shadow-md">
+    <a href="prose.html" class="hover-image group block relative max-w-md mx-auto">
+      <img src="images/Prose.png" alt="Theoretical" class="w-full h-auto shadow-md">
       <div class="image-overlay"></div>
       <div class="absolute inset-0 flex items-center justify-center z-10">
         <!-- Optional hover text if needed -->
