--- a/philosophy.html
+++ b/philosophy.html
@@ -1,1 +1,61 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Philosophy | Sympnoia</title>
+  <link href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css" rel="stylesheet">
+  <style>
+    body {
+      background-image: url('images/background.png');
+      background-size: cover;
+      background-repeat: no-repeat;
+      background-attachment: fixed;
+      background-position: center;
+      color: #e8e4d8;
+      font-family: 'Georgia', serif;
+    }
+    .entry-image {
+      max-height: 300px;
+      object-fit: cover;
+      border-radius: 0.75rem;
+      box-shadow: 0 4px 8px rgba(0,0,0,0.3);
+    }
+  </style>
+</head>
+<body class="bg-transparent">
+  <header class="text-center py-10">
+    <h1 class="text-4xl font-bold tracking-tight">Philosophy</h1>
+    <p class="mt-2 text-lg">Explorations of Ground, Being, and Shared Reality</p>
+  </header>
+
+  <main class="grid gap-10 px-8 pb-16">
+    <!-- Entry 1 Placeholder -->
+    <div class="grid grid-cols-1 lg:grid-cols-3 gap-6 items-center">
+      <div class="lg:col-span-2">
+        <a href="paper1.html" class="text-2xl font-semibold text-yellow-100 hover:underline">Paper Title Placeholder</a>
+        <p class="mt-2 text-base text-gray-200">A short synopsis of the philosophical paper. It introduces the central theme and situates it within the broader context of Sympnoia's ethical and metaphysical inquiry.</p>
+      </div>
+      <div>
+        <img src="images/placeholder1.png" alt="Paper Image 1" class="entry-image w-full">
+      </div>
+    </div>
+
+    <!-- Entry 2 Placeholder -->
+    <div class="grid grid-cols-1 lg:grid-cols-3 gap-6 items-center">
+      <div class="lg:col-span-2">
+        <a href="paper2.html" class="text-2xl font-semibold text-yellow-100 hover:underline">Another Paper Title</a>
+        <p class="mt-2 text-base text-gray-200">Another short description that introduces the theme of the second paper, elaborating its relevance and philosophical grounding within the Sympnoia ethos.</p>
+      </div>
+      <div>
+        <img src="images/placeholder2.png" alt="Paper Image 2" class="entry-image w-full">
+      </div>
+    </div>
+  </main>
+
+  <footer class="text-center py-8 text-sm text-gray-500">
+    &copy; 2025 Sympnoia. All rights reserved.
+  </footer>
+</body>
+</html>
 
