--- a/philosophy.html
+++ b/philosophy.html
@@ -41,13 +41,13 @@
       </div>
     </div>
 
-    <!-- Entry 2 Placeholder -->
+    <!-- Entry 2 Placeholder (Zigzag) -->
     <div class="grid grid-cols-1 lg:grid-cols-3 gap-6 items-center">
-      <div class="lg:col-span-2">
+      <div class="lg:col-start-2 lg:col-span-2">
         <a href="paper2.html" class="text-2xl font-semibold text-yellow-100 hover:underline">Another Paper Title</a>
         <p class="mt-2 text-base text-gray-200">Another short description that introduces the theme of the second paper, elaborating its relevance and philosophical grounding within the Sympnoia ethos.</p>
       </div>
-      <div>
+      <div class="lg:col-start-1">
         <img src="images/placeholder2.png" alt="Paper Image 2" class="entry-image w-full">
       </div>
     </div>
@@ -58,4 +58,3 @@
   </footer>
 </body>
 </html>
-
