--- a/philosophy.html
+++ b/philosophy.html
@@ -31,23 +31,23 @@
 
   <main class="grid gap-10 px-8 pb-16">
     <!-- Entry 1 Placeholder -->
-    <div class="grid grid-cols-1 lg:grid-cols-3 gap-6 items-center">
-      <div class="lg:col-span-2">
-        <a href="paper1.html" class="text-2xl font-semibold text-yellow-100 hover:underline">Paper Title Placeholder</a>
-        <p class="mt-2 text-base text-gray-200">A short synopsis of the philosophical paper. It introduces the central theme and situates it within the broader context of Sympnoia's ethical and metaphysical inquiry.</p>
-      </div>
+    <div class="grid grid-cols-1 lg:grid-cols-[1fr_1.618fr] gap-6 items-center">
       <div>
         <img src="images/placeholder1.png" alt="Paper Image 1" class="entry-image w-full">
+      </div>
+      <div>
+        <a href="paper1.html" class="text-2xl font-semibold text-yellow-100 hover:underline">Paper Title Placeholder</a>
+        <p class="mt-2 text-base text-gray-200">A short synopsis of the philosophical paper. It introduces the central theme and situates it within the broader context of Sympnoia's ethical and metaphysical inquiry.</p>
       </div>
     </div>
 
     <!-- Entry 2 Placeholder (Zigzag) -->
-    <div class="grid grid-cols-1 lg:grid-cols-3 gap-6 items-center">
-      <div class="lg:col-start-2 lg:col-span-2">
+    <div class="grid grid-cols-1 lg:grid-cols-[1.618fr_1fr] gap-6 items-center">
+      <div>
         <a href="paper2.html" class="text-2xl font-semibold text-yellow-100 hover:underline">Another Paper Title</a>
         <p class="mt-2 text-base text-gray-200">Another short description that introduces the theme of the second paper, elaborating its relevance and philosophical grounding within the Sympnoia ethos.</p>
       </div>
-      <div class="lg:col-start-1">
+      <div>
         <img src="images/placeholder2.png" alt="Paper Image 2" class="entry-image w-full">
       </div>
     </div>
