--- a/god_beyond.html
+++ b/god_beyond.html
@@ -1,1 +1,57 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>God Beyond Being | Sympnoia</title>
+  <link href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css" rel="stylesheet">
+  <style>
+    body {
+      background-image: url('images/background.png');
+      background-size: cover;
+      background-repeat: no-repeat;
+      background-attachment: fixed;
+      background-position: center;
+      color: #e8e4d8;
+      font-family: 'Georgia', serif;
+    }
+    .content-area {
+      max-width: 48rem; /* roughly 768px = Tailwind's max-w-3xl */
+      margin-left: auto;
+      margin-right: auto;
+      padding: 2rem;
+      background-color: rgba(0, 0, 0, 0.6);
+      border-radius: 1rem;
+      box-shadow: 0 4px 20px rgba(0, 0, 0, 0.4);
+    }
+    .content-area h2, .content-area h3 {
+      margin-top: 1.5rem;
+      font-weight: bold;
+    }
+    .content-area p {
+      margin-top: 1rem;
+      line-height: 1.7;
+    }
+  </style>
+</head>
+<body class="bg-transparent">
+  <header class="text-center py-10">
+    <h1 class="text-4xl font-bold tracking-tight">God Beyond Being</h1>
+    <p class="mt-2 text-lg italic">A Rational Theological Inquiry into the Ground of Grounds</p>
+  </header>
+
+  <div class="content-area">
+    <img src="images/god_beyond_title.png" alt="Title Image for God Beyond Being" class="w-full rounded-lg mb-8 shadow-lg">
+
+    <p><em>[Placeholder introduction]</em> This work explores the ontological dimensions of theological reasoning in an age shaped by neurocognition and artificial emergence. It reflects a synthesis of classical metaphysics with the ethical imperatives of shared reality.</p>
+
+    <!-- Full paper content will be inserted or written here -->
+    <p>[Full content coming soon...]</p>
+  </div>
+
+  <footer class="text-center py-8 text-sm text-gray-500">
+    &copy; 2025 Sympnoia. All rights reserved.
+  </footer>
+</body>
+</html>
 
