--- a/philosophy.html
+++ b/philosophy.html
@@ -33,10 +33,10 @@
     <!-- Entry 1 Placeholder -->
     <div class="grid grid-cols-1 lg:grid-cols-[1fr_1.618fr] gap-6 items-center">
       <div>
-        <img src="images/placeholder1.png" alt="Paper Image 1" class="entry-image w-full">
+        <img src="images/god_beyond_title.png" alt="Paper Image 1" class="entry-image w-full">
       </div>
       <div>
-        <a href="paper1.html" class="text-2xl font-semibold text-yellow-100 hover:underline">Paper Title Placeholder</a>
+        <a href="god_beyond.html" class="text-2xl font-semibold text-yellow-100 hover:underline">Paper Title Placeholder</a>
         <p class="mt-2 text-base text-gray-200">A short synopsis of the philosophical paper. It introduces the central theme and situates it within the broader context of Sympnoia's ethical and metaphysical inquiry.</p>
       </div>
     </div>
