--- a/philosophy.html
+++ b/philosophy.html
@@ -16,11 +16,12 @@
       font-family: 'Georgia', serif;
     }
     .entry-image {
-      max-height: 300px;
-      object-fit: cover;
-      border-radius: 0.75rem;
-      box-shadow: 0 4px 8px rgba(0,0,0,0.3);
-    }
+  max-width: 220px;
+  height: auto;
+  object-fit: cover;
+  border-radius: 0.75rem;
+  box-shadow: 0 4px 8px rgba(0,0,0,0.3);
+}
   </style>
 </head>
 <body class="bg-transparent">
