--- a/philosophy.html
+++ b/philosophy.html
@@ -33,18 +33,20 @@
   <main class="grid gap-10 px-8 pb-16">
     <!-- Entry 1 Placeholder -->
     <div class="grid grid-cols-1 lg:grid-cols-[1fr_1.618fr] gap-6 items-center">
-      <div>
+      <div> class="flex justify-center">
         <img src="images/god_beyond_title.png" alt="Paper Image 1" class="entry-image w-full">
       </div>
       <div>
         <a href="god_beyond.html" class="text-2xl font-semibold text-yellow-100 hover:underline">Paper Title Placeholder</a>
-        <p class="mt-2 text-base text-gray-200">A short synopsis of the philosophical paper. It introduces the central theme and situates it within the broader context of Sympnoia's ethical and metaphysical inquiry.</p>
+        <p class="mt-2 text-base text-gray-200">This work explores the metaphysical and theological implications of asking the question of questions: What is the root of existence itself?
+ It argues that the foundation of all that is must lie beyond perceivable being itself—a metaphysical Ground that gives rise to existence, intelligibility, and relation. 
+Through rigorous reasoning, it reframes the concept of divinity not as a supreme being, but as the enabling condition of reality. Rooted in the ethos of Sympnoia, it calls for a theology grounded not in dogma, but in shared, rational inquiry into the deepest structures of existence.</p>
       </div>
     </div>
 
     <!-- Entry 2 Placeholder (Zigzag) -->
     <div class="grid grid-cols-1 lg:grid-cols-[1.618fr_1fr] gap-6 items-center">
-      <div>
+      <div> class="flex justify-center">
         <a href="paper2.html" class="text-2xl font-semibold text-yellow-100 hover:underline">Another Paper Title</a>
         <p class="mt-2 text-base text-gray-200">Another short description that introduces the theme of the second paper, elaborating its relevance and philosophical grounding within the Sympnoia ethos.</p>
       </div>
