--- a/philosophy.html
+++ b/philosophy.html
@@ -33,7 +33,7 @@
   <main class="grid gap-10 px-8 pb-16">
     <!-- Entry 1 Placeholder -->
     <div class="grid grid-cols-1 lg:grid-cols-[1fr_1.618fr] gap-6 items-center">
-      <div> class="flex justify-center">
+      <div class="flex justify-center">
         <img src="images/god_beyond_title.png" alt="Paper Image 1" class="entry-image w-full">
       </div>
       <div>
@@ -46,7 +46,7 @@ Through rigorous reasoning, it reframes the concept of divinity not as a supreme
 
     <!-- Entry 2 Placeholder (Zigzag) -->
     <div class="grid grid-cols-1 lg:grid-cols-[1.618fr_1fr] gap-6 items-center">
-      <div> class="flex justify-center">
+      <div class="flex justify-center">
         <a href="paper2.html" class="text-2xl font-semibold text-yellow-100 hover:underline">Another Paper Title</a>
         <p class="mt-2 text-base text-gray-200">Another short description that introduces the theme of the second paper, elaborating its relevance and philosophical grounding within the Sympnoia ethos.</p>
       </div>
