--- a/philosophy.html
+++ b/philosophy.html
@@ -37,7 +37,7 @@
         <img src="images/god_beyond_title.png" alt="Paper Image 1" class="entry-image w-full">
       </div>
       <div>
-        <a href="god_beyond.html" class="text-2xl font-semibold text-yellow-100 hover:underline">Paper Title Placeholder</a>
+        <a href="god_beyond.html" class="text-2xl font-semibold text-yellow-100 hover:underline">God Beyond Being</a>
         <p class="mt-2 text-base text-gray-200">This work explores the metaphysical and theological implications of asking the question of questions: What is the root of existence itself?
  It argues that the foundation of all that is must lie beyond perceivable being itself—a metaphysical Ground that gives rise to existence, intelligibility, and relation. 
 Through rigorous reasoning, it reframes the concept of divinity not as a supreme being, but as the enabling condition of reality. Rooted in the ethos of Sympnoia, it calls for a theology grounded not in dogma, but in shared, rational inquiry into the deepest structures of existence.</p>
