--- a/index.html
+++ b/index.html
@@ -77,16 +77,7 @@
 
   </style>
 </head>
-<body 
-class="flex justify-between items-center p-4">
-  <a href="index.html">
-    <img src="images/logo.png" alt="Sympnoia Logo" class="h-10 w-auto">
-  </a>
-  
-  <button id="navToggle" class="md:hidden">
-    <img src="images/nav-icon.png" alt="Menu" class="h-8 w-8">
-  </button>
-class="bg-transparent">
+<body class="bg-transparent">
   <header class="text-center py-10">
     <h1 class="text-4xl font-bold tracking-tight site-title">Sympnoia</h1>
     <p class="mt-2 text-lg site-title">Breathing Together: An Ethical Framework for Shared Existence</p>
