--- a/index.html
+++ b/index.html
@@ -78,9 +78,22 @@
   </style>
 </head>
 <body class="bg-transparent">
-  <header class="text-center py-10">
-    <h1 class="text-4xl font-bold tracking-tight site-title">Sympnoia</h1>
-    <p class="mt-2 text-lg site-title">Breathing Together: An Ethical Framework for Shared Existence</p>
+ <header class="flex items-center justify-between px-4 py-6 sm:px-8">
+    <!-- Left: Logo -->
+    <a href="index.html">
+      <img src="images/logo.png" alt="Sympnoia Logo" class="h-12 w-auto">
+    </a>
+
+    <!-- Center: Title & Subtitle -->
+    <div class="text-center flex-1">
+      <h1 class="text-2xl sm:text-3xl lg:text-4xl font-bold tracking-tight site-title">Sympnoia</h1>
+      <p class="mt-1 text-sm sm:text-base site-title">Breathing Together: An Ethical Framework for Shared Existence</p>
+    </div>
+
+    <!-- Right: Menu Icon -->
+    <button class="sm:block">
+      <img src="images/navigation.png" alt="Menu" class="h-8 w-auto">
+    </button>
   </header>
 
   <main class="grid grid-cols-1 sm:grid-cols-2 lg:grid-cols-3 gap-6 p-6">
