--- a/index.html
+++ b/index.html
@@ -78,10 +78,10 @@
   </style>
 </head>
 <body class="bg-transparent">
- <header class="flex items-center justify-between px-4 py-6 sm:px-8">
+  <header class="flex items-center justify-between px-4 py-6 sm:px-8">
     <!-- Left: Logo -->
     <a href="index.html">
-      <img src="images/logo.png" alt="Sympnoia Logo" class="h-16 w-auto">
+      <img src="images/sympnoia-logo.png" alt="Sympnoia Logo" class="h-12 w-auto">
     </a>
 
     <!-- Center: Title & Subtitle -->
@@ -92,9 +92,24 @@
 
     <!-- Right: Menu Icon -->
     <button class="sm:block">
-      <img src="images/navigation.png" alt="Menu" class="h-8 w-auto">
+      <img src="images/menu-icon.png" alt="Menu" class="h-8 w-auto">
     </button>
   </header>
+
+  <!-- Navigation Menu Modal -->
+  <div id="navModal" class="fixed inset-0 bg-black bg-opacity-80 z-50 hidden">
+    <div class="absolute top-20 right-8 bg-[#1e1e1e] text-[#e96f1f] rounded-xl shadow-lg p-6 w-72">
+      <ul class="space-y-4">
+        <li class="text-xl font-semibold"><a href="index.html" class="hover:underline">Home</a></li>
+        <li class="text-lg font-medium ml-2"><a href="writings.html" class="hover:underline">Writings</a></li>
+        <li class="text-base ml-4"><a href="prose.html" class="hover:underline">↳ Prose</a></li>
+        <li class="text-base ml-4"><a href="philosophy.html" class="hover:underline">↳ Philosophy</a></li>
+        <li class="text-lg font-medium ml-2"><a href="blog.html" class="hover:underline">Blog</a></li>
+        <li class="text-lg font-medium ml-2"><a href="gallery.html" class="hover:underline">Gallery</a></li>
+        <li class="text-lg font-medium ml-2"><a href="glossary.html" class="hover:underline">Glossary</a></li>
+      </ul>
+    </div>
+  </div>
 
   <main class="grid grid-cols-1 sm:grid-cols-2 lg:grid-cols-3 gap-6 p-6">
     <a href="writings.html" class="hover-image group block relative max-w-md mx-auto">
