--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
   <header class="flex items-center justify-between px-4 py-6 sm:px-8">
     <!-- Left: Logo -->
     <a href="index.html">
-      <img src="images/sympnoia-logo.png" alt="Sympnoia Logo" class="h-12 w-auto">
+      <img src="images/logo.png" alt="Sympnoia Logo" class="h-12 w-auto">
     </a>
 
     <!-- Center: Title & Subtitle -->
@@ -92,7 +92,7 @@
 
     <!-- Right: Menu Icon -->
     <button class="sm:block">
-      <img src="images/menu-icon.png" alt="Menu" class="h-8 w-auto">
+      <img src="images/navigation.png" alt="Menu" class="h-8 w-auto">
     </button>
   </header>
 
