--- a/index.html
+++ b/index.html
@@ -97,16 +97,17 @@
   </header>
 
  <!-- Navigation Menu Side Panel -->
-<div id="navModal" class="fixed top-0 right-0 h-full w-72 bg-[#1e1e1e] text-[#e96f1f] z-50 hidden shadow-lg">
-  <div class="p-6">
-    <ul class="space-y-4">
-      <li class="text-xl font-semibold"><a href="index.html" class="hover:underline">Home</a></li>
-      <li class="text-lg font-medium ml-2"><a href="writings.html" class="hover:underline">Writings</a></li>
-      <li class="text-base ml-4"><a href="prose.html" class="hover:underline">↳ Prose</a></li>
-      <li class="text-base ml-4"><a href="philosophy.html" class="hover:underline">↳ Philosophy</a></li>
-      <li class="text-lg font-medium ml-2"><a href="blog.html" class="hover:underline">Blog</a></li>
-      <li class="text-lg font-medium ml-2"><a href="gallery.html" class="hover:underline">Gallery</a></li>
-      <li class="text-lg font-medium ml-2"><a href="glossary.html" class="hover:underline">Glossary</a></li>
+
+<div id="navModal" class="fixed top-20 right-4 z-50 hidden">
+  <div class="bg-[#1e1e1e]/90 text-[#e96f1f] rounded-xl shadow-lg p-6 w-64">
+    <ul class="space-y-3">
+      <li class="text-lg font-bold"><a href="index.html" class="hover:underline">Home</a></li>
+      <li class="text-base font-semibold ml-2"><a href="writings.html" class="hover:underline">Writings</a></li>
+      <li class="text-sm ml-4"><a href="prose.html" class="hover:underline">↳ Prose</a></li>
+      <li class="text-sm ml-4"><a href="philosophy.html" class="hover:underline">↳ Philosophy</a></li>
+      <li class="text-base font-semibold ml-2"><a href="blog.html" class="hover:underline">Blog</a></li>
+      <li class="text-base font-semibold ml-2"><a href="gallery.html" class="hover:underline">Gallery</a></li>
+      <li class="text-base font-semibold ml-2"><a href="glossary.html" class="hover:underline">Glossary</a></li>
     </ul>
   </div>
 </div>
