--- a/index.html
+++ b/index.html
@@ -98,16 +98,16 @@
 
  <!-- Navigation Menu Side Panel -->
 
-<div id="navModal" class="fixed top-20 right-4 sm:right-8 md:right-10 z-50 hidden w-32">
+<div id="navModal" class="fixed top-20 right-4 sm:right-8 md:right-10 z-50 hidden w-24">
   <div class="bg-[#1e1e1e]/90 text-[#d7c49e] rounded-xl shadow-lg p-6 w-64">
     <ul class="space-y-3">
-      <li class="text-lg font-bold"><a href="index.html" class="hover:underline">Home</a></li>
-      <li class="text-base font-semibold ml-2"><a href="writings.html" class="hover:underline">Writings</a></li>
-      <li class="text-sm ml-4"><a href="prose.html" class="hover:underline">↳ Prose</a></li>
-      <li class="text-sm ml-4"><a href="philosophy.html" class="hover:underline">↳ Philosophy</a></li>
-      <li class="text-base font-semibold ml-2"><a href="blog.html" class="hover:underline">Blog</a></li>
-      <li class="text-base font-semibold ml-2"><a href="gallery.html" class="hover:underline">Gallery</a></li>
-      <li class="text-base font-semibold ml-2"><a href="glossary.html" class="hover:underline">Glossary</a></li>
+      <li class="text-lg font-bold"><a href="index.html" class="hover:underline text-inherit">Home</a></li>
+      <li class="text-base font-semibold ml-2"><a href="writings.html" class="hover:underline text-inherit">Writings</a></li>
+      <li class="text-sm ml-4"><a href="prose.html" class="hover:underline text-inherit">↳ Prose</a></li>
+      <li class="text-sm ml-4"><a href="philosophy.html" class="hover:underline text-inherit">↳ Philosophy</a></li>
+      <li class="text-base font-semibold ml-2"><a href="blog.html" class="hover:underline text-inherit">Blog</a></li>
+      <li class="text-base font-semibold ml-2"><a href="gallery.html" class="hover:underline text-inherit">Gallery</a></li>
+      <li class="text-base font-semibold ml-2"><a href="glossary.html" class="hover:underline text-inherit">Glossary</a></li>
     </ul>
   </div>
 </div>
