--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
  <!-- Navigation Menu Side Panel -->
 
 <div id="navModal" class="fixed top-20 right-4 sm:right-8 md:right-10 z-50 hidden w-24">
-  <div class="bg-[#1e1e1e]/90 text-[#d7c49e] rounded-xl shadow-lg p-6 w-64">
+  <div class="bg-[#1e1e1e]/90 text-[#641c34] rounded-xl shadow-lg p-6 w-64">
     <ul class="space-y-3">
       <li class="text-lg font-bold"><a href="index.html" class="hover:text-[#e96f1f]"">Home</a></li>
       <li class="text-base font-semibold ml-2"><a href="writings.html" class="hover:text-[#e96f1f]">Writings</a></li>
