--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
 <div id="navModal" class="fixed top-20 right-4 sm:right-8 md:right-10 z-50 hidden w-24">
   <div class="bg-[#1e1e1e]/90 rounded-xl shadow-lg p-6 w-64">
     <ul class="space-y-3">
-      <li class="text-lg font-bold"><a href="index.html" class="text-[#641c34] hover:text-[#e96f1f]">Home</a></li>
+      <li class="text-lg font-bold" text-[#641c34] hover:text-[#e96f1f><a href="index.html" >Home</a></li>
       <li class="text-base font-semibold ml-2"><a href="writings.html" class="hover:text-[#e96f1f]">Writings</a></li>
       <li class="text-sm ml-4"><a href="prose.html" class="hover:text-[#e96f1f]">↳ Prose</a></li>
       <li class="text-sm ml-4"><a href="philosophy.html" class="hover:text-[#e96f1f]">↳ Philosophy</a></li>
