--- a/index.html
+++ b/index.html
@@ -74,7 +74,14 @@
       font-family: 'Cormorant Garamond', serif;
       color: #d7c49e;
     }
+    .menu-entry {
+    color: #d7c49e; 
+    font-family: 'Georgia', serif;
+  }
 
+  .menu-entry:hover {
+    color: #1b3a1a; 
+  }
   </style>
 </head>
 <body class="bg-transparent">
@@ -101,13 +108,13 @@
 <div id="navModal" class="fixed top-20 right-4 sm:right-8 md:right-10 z-50 hidden w-24">
   <div class="bg-[#1e1e1e]/90 rounded-xl shadow-lg p-6 w-64">
     <ul class="space-y-3">
-      <li class="text-lg font-bold color-[#641c34]"  ><a href="index.html" >Home</a></li>
-      <li class="text-base font-semibold ml-2"><a href="writings.html" class="hover:text-[#e96f1f]">Writings</a></li>
-      <li class="text-sm ml-4"><a href="prose.html" class="hover:text-[#e96f1f]">↳ Prose</a></li>
-      <li class="text-sm ml-4"><a href="philosophy.html" class="hover:text-[#e96f1f]">↳ Philosophy</a></li>
-      <li class="text-base font-semibold ml-2"><a href="blog.html" class="hover:text-[#e96f1f]">Blog</a></li>
-      <li class="text-base font-semibold ml-2"><a href="gallery.html" class="hover:text-[#e96f1f]">Gallery</a></li>
-      <li class="text-base font-semibold ml-2"><a href="glossary.html" class="hover:text-[#e96f1f]">Glossary</a></li>
+     <li><a href="index.html" class="menu-entry">Home</a></li>
+<li><a href="writings.html" class="menu-entry">Writings</a></li>
+<li><a href="prose.html" class="menu-entry">↳ Prose</a></li>
+<li><a href="philosophy.html" class="menu-entry">↳ Philosophy</a></li>
+<li><a href="blog.html" class="menu-entry">Blog</a></li>
+<li><a href="gallery.html" class="menu-entry">Gallery</a></li>
+<li><a href="glossary.html" class="menu-entry">Glossary</a></li>
     </ul>
   </div>
 </div>
