--- a/writings.html
+++ b/writings.html
@@ -35,11 +35,14 @@
     .hover-image:hover .image-overlay {
       background-color: rgba(27, 58, 26, 0);
     }
+.site-title {
+      font-family: 'Cormorant Garamond', serif;
+      color: #d7c49e;
+    }
 .menu-entry {
     color: #d7c49e; 
     font-family: 'Georgia', serif;
   }
-
   .menu-entry:hover {
     color: #e96f1f; 
   }
