--- a/writings.html
+++ b/writings.html
@@ -86,7 +86,7 @@
 </div>
 
   <main class="grid grid-cols-1 sm:grid-cols-2 lg:grid-cols-2 gap-6 p-6">
-    <a href="philosophy/philosophy.html" class="hover-image group block relative max-w-md mx-auto">
+    <a href="philosophy.html" class="hover-image group block relative max-w-md mx-auto">
       <img src="images/Philosophy.png" alt="Prose" class="w-full h-auto shadow-md">
       <div class="image-overlay"></div>
       <div class="absolute inset-0 flex items-center justify-center z-10">
