--- a/philosophy.html
+++ b/philosophy.html
@@ -22,12 +22,40 @@
   border-radius: 0.75rem;
   box-shadow: 0 4px 8px rgba(0,0,0,0.3);
 }
+.site-title {
+      font-family: 'Cormorant Garamond', serif;
+      color: #d7c49e;
+    }
+    .menu-entry {
+    color: #d7c49e; 
+    font-family: 'Georgia', serif;
+  }
+
+  .menu-entry:hover {
+    color: #e96f1f; 
+  }
   </style>
 </head>
+
 <body class="bg-transparent">
-  <header class="text-center py-10">
-    <h1 class="text-4xl font-bold tracking-tight">Philosophy</h1>
-    <p class="mt-2 text-lg">Explorations of Ground, Being, and Shared Reality</p>
+
+  <header class="flex items-center justify-between px-4 py-6 sm:px-8">
+    <!-- Left: Logo -->
+    <a href="index.html">
+      <img src="images/logo.png" alt="Sympnoia Logo" class="h-24 w-auto">
+    </a>
+
+<!-- Center: Title & Subtitle -->
+    <div class="text-center flex-1">
+      <h1 class="text-2xl sm:text-3xl lg:text-4xl font-bold tracking-tight site-title">Philosophy</h1>
+      <p class="mt-1 text-sm sm:text-base site-title">Explorations of Ground, Being, and Shared Reality</p>
+    </div>
+
+    <!-- Right: Menu Icon -->
+    <button class="sm:block">
+      <img src="images/navigation.png" alt="Menu" class="h-8 w-auto">
+    </button>
+ 
   </header>
 
   <main class="grid gap-10 px-8 pb-16">
@@ -37,7 +65,7 @@
         <img src="images/god_beyond_title.png" alt="Paper Image 1" class="entry-image w-full">
       </div>
       <div>
-        <a href="god_beyond.html" class="text-2xl font-semibold text-yellow-100 hover:underline">God Beyond Being</a>
+        <a href="philosophy/god_beyond.html" class="text-2xl font-semibold text-yellow-100 hover:underline">God Beyond Being</a>
         <p class="mt-2 text-base text-gray-200">This work explores the metaphysical and theological implications of asking the question of questions: What is the root of existence itself?
  It argues that the foundation of all that is must lie beyond perceivable being itself—a metaphysical Ground that gives rise to existence, intelligibility, and relation. 
 Through rigorous reasoning, it reframes the concept of divinity not as a supreme being, but as the enabling condition of reality. Rooted in the ethos of Sympnoia, it calls for a theology grounded not in dogma, but in shared, rational inquiry into the deepest structures of existence.</p>
@@ -59,5 +87,22 @@ Through rigorous reasoning, it reframes the concept of divinity not as a supreme
   <footer class="text-center py-8 text-sm text-gray-500">
     &copy; 2025 Sympnoia. All rights reserved.
   </footer>
+
+<script>
+  const menuBtn = document.querySelector("header button");
+  const navModal = document.getElementById("navModal");
+
+  menuBtn.addEventListener("click", () => {
+    navModal.classList.toggle("hidden");
+  });
+
+  // Optional: Close the modal if clicked outside or ESC
+  document.addEventListener("keydown", (e) => {
+    if (e.key === "Escape") {
+      navModal.classList.add("hidden");
+    }
+  });
+</script>
+
 </body>
 </html>
