--- a/philosophy.html
+++ b/philosophy.html
@@ -58,6 +58,23 @@
  
   </header>
 
+<!-- Navigation Menu Side Panel -->
+
+<div id="navModal" class="fixed top-20 right-4 sm:right-8 md:right-10 z-50 hidden w-24">
+  <div class="bg-[#1e1e1e]/90 rounded-xl shadow-lg p-6 w-64">
+    <ul class="space-y-3">
+     <li><a href="index.html" class="menu-entry">Home</a></li>
+<li><a href="writings.html" class="menu-entry">Writings</a></li>
+<li><a href="prose.html" class="menu-entry">↳ Prose</a></li>
+<li><a href="philosophy.html" class="menu-entry">↳ Philosophy</a></li>
+<li><a href="blog.html" class="menu-entry">Blog</a></li>
+<li><a href="gallery.html" class="menu-entry">Gallery</a></li>
+<li><a href="glossary.html" class="menu-entry">Glossary</a></li>
+    </ul>
+  </div>
+</div>
+
+
   <main class="grid gap-10 px-8 pb-16">
     <!-- Entry 1 Placeholder -->
     <div class="grid grid-cols-1 lg:grid-cols-[1fr_1.618fr] gap-6 items-center">
